<resources>
    <string name="app_name">ChallengeApplication</string>
    <string name="enter">Enter</string>
    <string name="foodso">FO\nOD\nSO</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="full_name">Full name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="food_collections">Food collections</string>
    <string name="popular_food">Popular food</string>
    <string name="chefs">Chefs</string>
    <string name="filter">Filter</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
