<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <View
        android:id="@+id/viewPink"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/viewWhite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_left_right_corners"
        app:layout_constraintTop_toBottomOf="@+id/viewPink"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/fruits"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvSignUp"
        app:layout_constraintEnd_toStartOf="@+id/tvSignUp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/signup"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/text_opacity_pink"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvLogin"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp20"
        android:layout_marginStart="@dimen/dp20"
        android:layout_marginTop="@dimen/dp20"
        android:background="@color/white"
        android:orientation="vertical"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSignUp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp20">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintUsername"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/bg_edittext_stroke_corners">

                <ImageView
                    android:id="@+id/imvUser"
                    android:layout_width="24dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/dp25"
                    android:contentDescription="@string/full_name"
                    app:srcCompat="@drawable/ic_user"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/edtName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp25"
                    android:layout_marginStart="14dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/full_name"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:textCursorDrawable="@null"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imvUser"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintEmail"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="@dimen/dp20"
                android:background="@drawable/bg_edittext_stroke_corners"
                app:layout_goneMarginTop="0dp"
                app:layout_constraintTop_toBottomOf="@+id/constraintUsername">

                <ImageView
                    android:id="@+id/imvEmail"
                    android:layout_width="24dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/dp25"
                    android:contentDescription="@string/email_address"
                    app:srcCompat="@drawable/ic_mail"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp25"
                    android:layout_marginStart="14dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textCursorDrawable="@null"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imvEmail"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintPassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="@dimen/dp20"
                android:background="@drawable/bg_edittext_stroke_corners"
                app:layout_constraintTop_toBottomOf="@+id/constraintEmail">

                <ImageView
                    android:id="@+id/imvPassword"
                    android:layout_width="24dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/dp25"
                    android:contentDescription="@string/password"
                    app:srcCompat="@drawable/ic_password"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp25"
                    android:layout_marginStart="14dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/password"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:textCursorDrawable="@null"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imvPassword"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>


    <TextView
        android:id="@+id/tvForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:background="@drawable/bg_button_corners"
        android:layout_marginBottom="@dimen/dp20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>